[gd_scene load_steps=10 format=3 uid="uid://db0q2oseq1tiw"]

[ext_resource type="Texture2D" uid="uid://ec4ody0rmgd0" path="res://icon.svg" id="1_hxeww"]
[ext_resource type="Script" path="res://objects/tooltip/item_selection.gd" id="1_q738r"]
[ext_resource type="Script" path="res://scripts/utility/sound_button.gd" id="2_27dig"]
[ext_resource type="StyleBox" uid="uid://b2n2lhl4do6xx" path="res://button_style.tres" id="2_fgg7x"]
[ext_resource type="PackedScene" uid="uid://d3urw8d4uyseg" path="res://objects/tooltip/item_description.tscn" id="2_oco1m"]
[ext_resource type="FontFile" uid="uid://byc1ouwicguue" path="res://fonts/OpenSans-Bold.ttf" id="3_y6osn"]

[sub_resource type="Curve" id="Curve_nm3mg"]
_data = [Vector2(0, 1), 0.0, -1.27724e-06, 0, 1, Vector2(0.0933333, 1), 0.0, 0.0, 0, 0, Vector2(0.28, 0), -5.35714, 0.0, 1, 0]
point_count = 3

[sub_resource type="Gradient" id="Gradient_l5usf"]
offsets = PackedFloat32Array(0, 0.0862944, 0.152284, 0.304569)
colors = PackedColorArray(1, 0.886275, 0.662745, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pywe8"]
draw_center = false
border_width_bottom = 2
border_color = Color(0.636719, 0.413038, 0.350747, 1)

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -375.0
offset_bottom = -388.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_q738r")

[node name="Button" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme_override_styles/disabled_mirrored = ExtResource("2_fgg7x")
theme_override_styles/disabled = ExtResource("2_fgg7x")
script = ExtResource("2_27dig")

[node name="Control" type="Control" parent="Button"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="CPUParticles2D" type="CPUParticles2D" parent="Button/Control"]
z_index = 1
emitting = false
amount = 28
lifetime = 4.0
one_shot = true
preprocess = 0.2
explosiveness = 0.95
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 713.11
initial_velocity_max = 713.11
damping_min = 1000.0
damping_max = 1200.0
damping_curve = SubResource("Curve_nm3mg")
scale_amount_min = 0.0
scale_amount_max = 17.4
color_ramp = SubResource("Gradient_l5usf")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
mouse_filter = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(96, 96)
layout_mode = 2
size_flags_horizontal = 0
mouse_filter = 2
texture = ExtResource("1_hxeww")
expand_mode = 1
stretch_mode = 5

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 4
mouse_filter = 2

[node name="ItemName" type="Label" parent="MarginContainer/HBoxContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_outline_color = Color(0.5625, 0.26108, 0.184979, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("3_y6osn")
theme_override_font_sizes/font_size = 18
theme_override_styles/normal = SubResource("StyleBoxFlat_pywe8")
text = "Item name"

[node name="ItemDescription" parent="MarginContainer/HBoxContainer/MarginContainer/VBoxContainer" instance=ExtResource("2_oco1m")]
unique_name_in_owner = true
layout_mode = 2
text = "sdf
sdf
sdf
sdf
sdf
sdf
sdf
sdf
sdf
sdf
sdf
sdf"

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
